# crypto_xp_rs

./: .gitignore  Cargo.toml  README.md
benches/: crypto_bench.rs
docs/: ALGORITHMS.md  ARCHITECTURE.md  CHANGELOG_TEMPLATE.md  CONTRIBUTING.md  LICENSE-HEADER.txt  MAINTENANCE.md  PKCS11_PROVIDER_SKELETON.md  PROVIDER_GUIDE.md  SECURITY.md  SECURITY_POLICY.md  TLS_INTEGRATION.md  TROUBLESHOOTING.md  USAGE.txt
examples/: example.rs  example_verbose.rs
src/: errors.rs  lib.rs
src/api/: asymmetric.rs  hash.rs  kdf.rs  key.rs  mac.rs  mod.rs  provider.rs  rng.rs  sign.rs  symmetric.rs
src/providers/software/: asymmetric_sw.rs  hash_sw.rs  kdf_sw.rs  key_sw.rs  mac_sw.rs  mod.rs  rng_sw.rs  sign_sw.rs  symmetric_sw.rs
tests/: ecdh_ecdsa.rs  hash_mac_kdf_rng.rs  symmetric.rs
